# memsom

./: .gitignore  .mcp.json  ARCHITECTURE.md  BUILT.md  CLA.md  CONTRIBUTING.md  README.md  TESTERS.md  WONT-BUILD.md  bootstrap.py  demo.ps1  demo2.ps1  demo_poison.ps1  demo_poison.tape  demo_poison_social.tape  external_fallback.txt  memdag.py  memdag_anticipatory.py  memdag_audit.py  memdag_blame.py  memdag_bridge_import.py  memdag_bridge_render.py  memdag_bridge_sync.py  memdag_broker.py  memdag_capgate.py  memdag_chats.py  memdag_claude.py  memdag_cli.py  memdag_compact.py  memdag_confid.py  memdag_config.py  memdag_corroborate.py  memdag_dashboard.py  memdag_digest.py  memdag_distill.py  memdag_doctor.py  memdag_embed.py  memdag_federation.py  memdag_forget.py  memdag_gate.py  (+158 more)
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cla.yml  tests.yml
bench/: .gitignore  GRAPH_ABLATION_FINDINGS.md  GRAPH_H2H_RUNBOOK.md  README.md  audit_optimize.py  bench_linker.py  citation_diff.py  combo_h2h.py  compare.py  consumer_eval.py  contradict_eval.py  cross_gemma_manual.py  cross_rerank.py  cross_rerank2.py  cross_rerank_gemma.py  dataset.py  dataset_stale.py  full500_eval.py  haystack_cross.py  haystack_rerank.py  hyde_eval.py  judge.py  learned_rerank.py  learned_rerank2.py  llm_rerank.py  mem0_adapter.py  memdag_vs_improved.py  memsom_vs_improved.py  openai_judge.py  perf_per_write.py  poison.py  precache_links.py  prefix_probe.py  profile_item.py  profile_q.py  qa_real.py  recency_exp.py  run_all_h2h.bat  run_bench.py  run_bench_fast.py  (+10 more)
bench/adapters/: __init__.py  base.py  mem0_adapter.py  memdag_adapter.py  memsom_adapter.py  rag_adapter.py
bench/fixtures/: factrecall_min.json  staleness_curated.json  staleness_min.json
claude/: CLAUDE.md.template
claude/skills/audit/: SKILL.md
claude/skills/memdash/: SKILL.md
claude/skills/recall/: SKILL.md
claude/skills/saveall/: SKILL.md
claude/skills/verify-stale/: SKILL.md
demo/: demo.ps1  demo2.ps1  demo_poison.ps1  demo_poison.tape  demo_poison_social.tape
memsom/: __init__.py  __main__.py  external_fallback.txt
memsom/bridge/: __init__.py  bridge_import.py  bridge_render.py  bridge_sync.py  chats.py  claude.py  facts.py  hook.py  obsidian.py  wire_claude.py
memsom/distill/: __init__.py  digest.py  distill.py  llm.py
memsom/federation/: __init__.py  broker.py  federation.py
memsom/integrity/: __init__.py  capgate.py  confid.py  contradict.py  corroborate.py  gate.py  policy.py  quarantine.py  redact.py  stale.py  tombstone.py  trust.py  verify_stale.py
memsom/interface/: __init__.py  audit.py  blame.py  cli.py  dashboard.py  ingest.py  mcp.py  panel.py  profile.py  saveall.py  telemetry.py
memsom/lifecycle/: __init__.py  anticipatory.py  compact.py  doctor.py  forget.py  heal.py  reflex.py
memsom/providers/: __init__.py  agent_handlers.py  agent_store.py  agents.py  base.py  chatterbox.py  claude.py  codex.py  handlers.py  kernel_handlers.py  kernels.py  kokoro.py  llamacpp.py  oai.py  ollama.py  parakeet.py  procman.py  registry.py  schedule.py  session.py  vllm.py  voice_base.py  voice_convo.py  voice_handlers.py  vram.py
memsom/providers/tools/: __init__.py  base.py  builtins.py  registry.py
memsom/retrieval/: __init__.py  code_index.py  embed.py  qwen_embed.py  recompute.py  rederive.py  relate.py  retrieve.py
memsom/storage/: __init__.py  schema.py  session.py
scripts/: history_scan.py  scrub_gate.py
tests/: __init__.py  test_bench_smoke.py  test_bootstrap.py  test_chats.py  test_code_index.py  test_config.py  test_config_json.py  test_config_toml.py  test_docs.py  test_doctor.py  test_forget_params.py  test_fresh_db_paths.py  test_history_scan.py  test_init.py  test_memsom.py  test_memsom_anticipatory.py  test_memsom_archaudit.py  test_memsom_audit.py  test_memsom_blame.py  test_memsom_bridge_import.py  test_memsom_bridge_render.py  test_memsom_bridge_sync.py  test_memsom_broker.py  test_memsom_broker_poc.py  test_memsom_capgate.py  test_memsom_claude.py  test_memsom_cli.py  test_memsom_compact.py  test_memsom_confid.py  test_memsom_contradict.py  test_memsom_corroborate.py  test_memsom_dashboard.py  test_memsom_digest.py  test_memsom_distill.py  test_memsom_embed.py  test_memsom_facts.py  test_memsom_federation.py  test_memsom_federation_security.py  test_memsom_forget.py  test_memsom_gate.py  (+34 more)
