# memsom packaging — flat layout, deliberately.
#
# The repo is a flat set of memsom_*.py modules at the root and memsom.py is
# imported as `import memsom` by everything (frozen core + the full test suite).
# DO NOT restructure into a memsom/ package: that breaks the frozen
# `import memsom` contract.  Instead the wheel ships each module as a
# top-level module (the hatchling equivalent of setuptools py-modules).

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "memsom"
version = "0.2.0"
description = "Derivation-DAG memory store for AI agents: provenance edges, channel-stamped Biba integrity labels, revoke-cascade, taint tracking. Stdlib-only."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Matthew Somanlall" }]
keywords = ["memory", "provenance", "dag", "agents", "integrity", "biba"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Security",
]
# ZERO runtime dependencies — memsom is stdlib-only.  The optional Ollama
# integration is reached over urllib at runtime and is NOT a pip dependency.
dependencies = []

[project.optional-dependencies]
# Best-quality retrieval: the BGE-M3 triple-fusion backend (dense + learned
# sparse + ColBERT late-interaction re-rank). Opt-in ONLY — the core stays
# zero-dependency and falls back to Ollama/BM25 if these are absent. FlagEmbedding
# pulls torch + transformers transitively (multi-GB). For CUDA acceleration,
# install a matching torch build first (see README). Enable at runtime with
# MEMDAG_EMBED_BACKEND=bge-m3.
# Floor is the version this backend is verified against (the BGE service the
# author runs); the code uses the `devices=` constructor kwarg, which this line
# is known to accept. Bump only after re-testing.
bge = ["FlagEmbedding>=1.4.0"]

[project.urls]
Repository = "https://github.com/MattsomStudio/memsom"

[project.scripts]
memsom = "memsom_cli:main"
memsom-mcp = "memsom_mcp:main"
memsom-broker = "memsom_broker:main"

# ---------------------------------------------------------------------------
# Wheel: every memsom*.py runtime module as a flat top-level module.
# Tests (test_*.py), _build/, _weights/, *.db, audit_poc, demo scripts are
# all excluded by construction (only-include is an allowlist).
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
only-include = [
    "memsom.py",
    "memsom_anticipatory.py",
    "memsom_audit.py",
    "memsom_blame.py",
    "memsom_bridge_import.py",
    "memsom_bridge_render.py",
    "memsom_bridge_sync.py",
    "memsom_broker.py",
    "memsom_capgate.py",
    "memsom_chats.py",
    "memsom_claude.py",
    "memsom_cli.py",
    "memsom_compact.py",
    "memsom_config.py",
    "memsom_confid.py",
    "memsom_contradict.py",
    "memsom_corroborate.py",
    "memsom_dashboard.py",
    "memsom_digest.py",
    "memsom_distill.py",
    "memsom_doctor.py",
    "memsom_embed.py",
    "memsom_federation.py",
    "memsom_forget.py",
    "memsom_gate.py",
    "memsom_heal.py",
    "memsom_hook.py",
    "memsom_ingest.py",
    "memsom_llm.py",
    "memsom_mcp.py",
    "memsom_obsidian.py",
    "memsom_policy.py",
    "memsom_profile.py",
    "memsom_quarantine.py",
    "memsom_recompute.py",
    "memsom_redact.py",
    "memsom_rederive.py",
    "memsom_reflex.py",
    "memsom_relate.py",
    "memsom_retrieve.py",
    "memsom_schema.py",
    "memsom_session.py",
    "memsom_stale.py",
    "memsom_tombstone.py",
    "memsom_trust.py",
    "memsom_verify_stale.py",
    "memsom_wire_claude.py",
]

# Data file: memsom.py resolves external_fallback.txt next to itself
# (HOME / "external_fallback.txt"), so it must land in site-packages root
# beside memsom.py for `memsom seed --offline` to work after a wheel install.
[tool.hatch.build.targets.wheel.force-include]
"external_fallback.txt" = "external_fallback.txt"
# Bundled Claude Code memory loop (skills + CLAUDE.md template) so a standalone
# `pip install` + `memsom wire-claude` finds them without a repo clone. The CLI
# resolves them relative to the installed package (site-packages/claude/...).
"claude" = "claude"

# ---------------------------------------------------------------------------
# sdist: same allowlist + the data file (README/LICENSE/pyproject.toml are
# added automatically from the project metadata above).
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.sdist]
only-include = [
    "memsom.py",
    "memsom_anticipatory.py",
    "memsom_audit.py",
    "memsom_blame.py",
    "memsom_bridge_import.py",
    "memsom_bridge_render.py",
    "memsom_bridge_sync.py",
    "memsom_broker.py",
    "memsom_capgate.py",
    "memsom_chats.py",
    "memsom_claude.py",
    "memsom_cli.py",
    "memsom_compact.py",
    "memsom_config.py",
    "memsom_confid.py",
    "memsom_contradict.py",
    "memsom_corroborate.py",
    "memsom_dashboard.py",
    "memsom_digest.py",
    "memsom_distill.py",
    "memsom_doctor.py",
    "memsom_embed.py",
    "memsom_federation.py",
    "memsom_forget.py",
    "memsom_gate.py",
    "memsom_heal.py",
    "memsom_hook.py",
    "memsom_ingest.py",
    "memsom_llm.py",
    "memsom_mcp.py",
    "memsom_obsidian.py",
    "memsom_policy.py",
    "memsom_profile.py",
    "memsom_quarantine.py",
    "memsom_recompute.py",
    "memsom_redact.py",
    "memsom_rederive.py",
    "memsom_reflex.py",
    "memsom_relate.py",
    "memsom_retrieve.py",
    "memsom_schema.py",
    "memsom_session.py",
    "memsom_stale.py",
    "memsom_tombstone.py",
    "memsom_trust.py",
    "memsom_verify_stale.py",
    "memsom_wire_claude.py",
    "external_fallback.txt",
    "claude",
]
