# memsom packaging — memsom/ package layout.
#
# Core lives in memsom/__init__.py, so `import memsom` still resolves the core
# API unchanged. The rest of the stack is grouped into subpackages
# (storage/ retrieval/ integrity/ lifecycle/ bridge/ federation/ distill/
# interface/). Internal imports use `from memsom.<group> import <mod>`.
# The wheel ships the whole memsom/ package (including the co-located
# external_fallback.txt data file) plus the bundled claude/ memory loop.

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "memsom"
version = "0.2.0"
description = "Derivation-DAG memory store for AI agents: provenance edges, channel-stamped Biba integrity labels, revoke-cascade, taint tracking. Stdlib-only."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Matthew Somanlall" }]
keywords = ["memory", "provenance", "dag", "agents", "integrity", "biba"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Security",
]
# ZERO runtime dependencies — memsom is stdlib-only.  The optional Ollama
# integration is reached over urllib at runtime and is NOT a pip dependency.
dependencies = []

[project.optional-dependencies]
# Best-quality retrieval: the BGE-M3 triple-fusion backend (dense + learned
# sparse + ColBERT late-interaction re-rank). Opt-in ONLY — the core stays
# zero-dependency and falls back to Ollama/BM25 if these are absent. FlagEmbedding
# pulls torch + transformers transitively (multi-GB). For CUDA acceleration,
# install a matching torch build first (see README). Enable at runtime with
# MEMDAG_EMBED_BACKEND=bge-m3.
# Floor is the version this backend is verified against (the BGE service the
# author runs); the code uses the `devices=` constructor kwarg, which this line
# is known to accept. Bump only after re-testing.
bge = ["FlagEmbedding>=1.4.0"]

# Panel server system-telemetry module (memsom.interface.telemetry): per-process
# RAM/GPU sampling needs psutil. Opt-in ONLY — the core stays zero-dependency and
# the telemetry module degrades its psutil-backed sections gracefully when this
# extra isn't installed (see memsom/interface/telemetry.py).
panel = ["psutil>=7"]

[project.urls]
Repository = "https://github.com/MattsomStudio/memsom"

[project.scripts]
memsom = "memsom.interface.cli:main"
memsom-mcp = "memsom.interface.mcp:main"
memsom-broker = "memsom.federation.broker:main"

# ---------------------------------------------------------------------------
# Wheel: the whole memsom/ package. external_fallback.txt lives inside
# memsom/ and ships as package data; the CLI resolves it via
# Path(memsom.__file__).parent / "external_fallback.txt" after install.
# Tests/, _build/, _weights/, *.db, bench/, demo/ are excluded by construction.
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["memsom"]

# Bundled Claude Code memory loop (skills + CLAUDE.md template) so a standalone
# `pip install` + `memsom wire-claude` finds them without a repo clone. The CLI
# resolves them relative to the installed package (site-packages/claude/...).
[tool.hatch.build.targets.wheel.force-include]
"claude" = "claude"

# ---------------------------------------------------------------------------
# sdist: the memsom/ package (incl. external_fallback.txt) + the bundled
# claude/ loop. README/LICENSE/pyproject.toml are added automatically.
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.sdist]
only-include = [
    "memsom",
    "claude",
]
